welcome.lessons.welcome.array.array123.Array123.scala.error
array123:14: error: value === is not a member of Int
  if ((pres1==1) && (pres2===1) && (pres3==1)) {
                          ^